# inversekinematics

./: CMakeLists.txt  README.md  ik  ik.c
glad/include/glad/: glad.h
